# MolGraphDB

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  main.py  molecular_subgraphs.db  pyproject.toml
backend/: main.py
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.js  Docs.css  Docs.js  MolecularVisualization.css  MolecularVisualization.js  theme.css
juliaMolGraph/: Manifest.toml  Project.toml  molecular_subgraphs.db  src.jl
src/: hello.py  mcs.py
tests/: test_hello.py
