[project]
name = "python-project-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.3",
    "networkx>=3.5",
    "numpy>=2.2.6",
    "pip>=25.1.1",
    "pydantic>=2.11.5",
    "pytest-cov>=6.0.0",
    "rdkit>=2025.3.2",
    "scipy>=1.15.3",
]

[dependency-groups]
dev = [
    "ipython>=9.3.0",
    "ruff>=0.11.13",
]
